--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
       </section>
       <section class="mission">
         <h2>Mission: track the spread of COVID-19</h2>
-        <p>Our goal is to help citizens, communities, and society as a whole in the fight against the coronavirus pandemic. The current scale of testing does not allow healthcare professionals to monitor the spread of the virus well enough, as a large amount of the affected are not tested at all.</p>
-        <p>The Fevermap is an effort to fix this by having ordinary people around the world self-report their fever. Using biological population methods we can estimate the prevalence of COVID-19 infections in real-time and provide authorities with data on how many people are sick, and if the number is increasing or decreasing.</p>
-        <p>Read more: <a href="faq.html">Frequently asked questions</a></p>
+        <p>The current scale of lab testing does not allow healthcare professionals to monitor the spread of the virus well enough, as a large amount of affected people are not tested at all. Our goal is to help citizens, communities, and society as a whole in the fight against the coronavirus pandemic by providing a solution for mapping the extent of the pandemia.</p>
+        <p>The Fevermap works by having ordinary people around the world self-report their body temperature and relevant symptoms. Using biological population methods we can estimate the prevalence of COVID-19 infections and provide authorities with data on how many people are sick in real-time.</p>
+        <p>Authorities are faced with the challenge of balancing between making too few restrictions, and risking that the outbreak expands, or making too many restrictions and for too long, potentially unnecessarily harming normal life and the economy. We hope that authorities could simply look at the <strong>data collected by the Fevermap, which covers more people and at an earlier stage</strong> than just the records of people who seek medical care and get tested.</p>
+        <p>Read more: <a href="faq">Frequently asked questions</a></p>
       </section>
       <div class="spacer"></div>
       <section class="breaker">
@@ -70,8 +71,8 @@
           </div>
           <div class="flex-item">
             <h4>Collaborate with us</h4>
-            <p>If you represent a health authority and would like to have this app deployed in your region, please send us email at <a href="mailto:contact@fevermap.net">contact@fevermap.net</a>.</p>
-            <p>If you represent some other organization that could benefit of this, work on similar technology or for whatever reason want to collaborate, contact us by email on the address above. We are open to collaboration!</p>
+            <p>If you represent a health authority and would like to have this app deployed in your region, please send us an email at <a href="mailto:contact@fevermap.net">contact@fevermap.net</a>.</p>
+            <p>If you represent some other organization that could benefit from this, work on similar technology or for whatever reason want to collaborate, contact us by email on the address above. We are open to collaboration!</p>
             <a class="cta" href="https://join.slack.com/t/hackthecrisisfinland/shared_invite/zt-cv34hdk4-hI9chEn0cUF~MAQBFqCvhg">Join Slack</a>
           </div>
           <div class="flex-item">
