Add placeholder file to support APM monitoring

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -39,5 +39,6 @@
 
 <noscript><p>This page relies on javascript. Please enable javascript to use this page.</p></noscript>
 <script type="text/javascript" src="/window-settings.js"></script>
-<script type="text/javascript" src="/main.js"></script></body>
+<script type="text/javascript" src="/main.js"></script>
+<script type="text/javascript" src="/apm-monitoring.js"></script></body>
 </html>
