updated the slack links

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h4>Collaborate with us</h4>
             <p>If you represent a health authority and would like to have this app deployed in your region, please send us an email at <a href="mailto:contact@fevermap.net">contact@fevermap.net</a>.</p>
             <p>If you represent some other organization that could benefit from this, work on similar technology or for whatever reason want to collaborate, contact us by email on the address above. We are open to collaboration!</p>
-            <a class="cta" href="https://join.slack.com/t/hackthecrisisfinland/shared_invite/zt-cv34hdk4-hI9chEn0cUF~MAQBFqCvhg">Join Slack</a>
+            <a class="cta" href="https://join.slack.com/t/fevermap/shared_invite/zt-dw98cjqe-8oeLWv1zCz0bYMeIwhb~uQ">Join Slack</a>
           </div>
           <div class="flex-item">
             <h4>Develop and analyze</h4>
