Add closing message before shutting down fevermap

--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
     </div>
 
     <main>
+        <section>
+            <h2 class="warning-message">Fevermap will be closing in July 2020.</h2>
+            <p>We are greatful for all of the developers, designers, community managers and users of Fevermap for showing interest in the project.</p>
+            <p>We regret to inform you that Fevermap will be closed out of service in July 2020.</p>
+            <p>Thank you for your participation. If interest raises to relaunch or further develop or repurpouse the application, please contact the team via email. Be safe!</p>
+            <p>- The Fevermap Team</p>
+        </section>
       <section>
-        <h2>Use the app 10 seconds a day</h2>
-        <a class="cta" href="https://app.fevermap.net/?installApp=true">Launch the Fevermap app</a>
-        <p>To participate, just report your fever and other symptoms anonymously once a day on the app.</p>
-        <p>Available in 14 languages!</p>
         <img src="images/ui-overview-web.png" alt="UI overview" id="ui">
       </section>
       <section class="mission">
