Fix typo on landing page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h2 class="warning-message">Fevermap will be closing in July 2020.</h2>
             <p>We are greatful for all of the developers, designers, community managers and users of Fevermap for showing interest in the project.</p>
             <p>We regret to inform you that Fevermap will be closed out of service in July 2020.</p>
-            <p>Thank you for your participation. If interest raises to relaunch or further develop or repurpouse the application, please contact the team via email. Be safe!</p>
+            <p>Thank you for your participation. If interest raises to relaunch or further develop or repurpose the application, please contact the team via email. Be safe!</p>
             <p>- The Fevermap Team</p>
         </section>
       <section>
